2008-05-08  Juanma Barranquero  <lekktu@gmail.com>

	* org/org.el (org-modules, org-format-latex-options):
	* org/org-archive.el (org-archive-stamp-time)
	(org-archive-save-context-info):
	* org/org-faces.el (org-hide):
	* org/org-irc.el (org-irc-parse-link):
	* org/org-macs.el (org-call-with-arg, org-autoload):
	* org/org-mew.el (org-mew-store-link):
	* org/org-remember.el (org-remember-store-without-prompt)
	(org-remember-templates): Fix typos in docstrings.

	* org/org-info.el (org-info-store-link): Remove leftover docstring.

	* org/org-bbdb.el (org-bbdb-export): Remove leftover docstring.
	(org-bbdb-anniversary-field, org-bbdb-extract-date-fun)
	(org-bbdb-anniv-split): Fix typos in docstrings.

	* org/org-publish.el (org-publish-project-alist): Doc fixes.
	(org-publish-use-timestamps-flag): Reflow docstring.
	(org-publish-files-alist): Fix typos in docstring.

2008-05-07  Sam Steingold  <sds@gnu.org>

	* pcvs-util.el (cvs-bury-buffer): Revert my patch: quit-window
	appears to be too aggressive with window removal.

2008-05-08  Michael McNamara  <mac@mail.brushroad.com>

	* verilog-mode.el (verilog-type-font-keywords): Add leda and 0in
	as pragma keywords.
	(verilog-pretty-expr): Support lining up assignments which include
	part selects.
	(verilog-mode): More portable check for the availability of
	hideshow support.
	(verilog-do-indent): Remove special indent for declarations inside
	a parenthetical list.  The code is ill-advised, and doesn't work
	given the new user defined types.
	(verilog-set-auto-endcomments): Enhance function automatic
	endcomment to support functions that return user defined types.
	(verilog-mode): Add code to tell which-function-mode minor mode
	that Verilog supports this feature.

2008-05-08  Eli Zaretskii  <eliz@gnu.org>

	* epa-file.el: Require epa-hook.

	* loadup.el ("epa-hook"): Load epa-hook instead of epa-file-hook.

	* epa-hook.el: Renamed from epa-file-hook.el, to avoid
	file-names clashes on 8+3 filesystems.  Provide epa-hook.